Corrects center aligned image blocks in the editor view

--- a/wp-content/themes/base/assets/scss/block-editor.scss
+++ b/wp-content/themes/base/assets/scss/block-editor.scss
@@ -28,6 +28,10 @@
 	@import "_block-separator.scss";
 	@import "_block-spacers.scss";
 	@import "_tinymce.scss";
+
+	.wp-block-image.aligncenter .components-resizable-box__container {
+		margin: 0 auto;
+	}
 }
 
 body.gutenberg-editor-page .editor-post-title__block, 
